testsuite/poke.pkl/attr-ename-diag-1.pk
/* { dg-do compile } */

var s =
   "foo"'ename (2); /* { dg-error "not defined" } */
